# ai_colorbot

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindCUDNN.cmake  FindSerial.cmake  FindTensorRT.cmake
config/: config.ini
docs/: architecture.md
models/: README.md
src/: app.h  main.cpp
src/capture/: capture.cpp  capture.h  duplicationApiCapture.cpp  duplicationApiCapture.h
src/config/: config.cpp  config.h
src/detection/: detector.cpp  detector.h  postProcess.cpp  postProcess.h
src/inference/: tensorrtEngine.cpp  tensorrtEngine.h
src/input/: makcuConnection.cpp  makcuConnection.h  mouse.cpp  mouse.h  target.cpp  target.h
src/overlay/: drawAi.cpp  drawAim.cpp  drawCapture.cpp  drawColor.cpp  drawSettings.h  overlay.cpp  overlay.h  visuals.cpp  visuals.h
src/util/: otherTools.cpp  otherTools.h
